# gl-toolkit-rs

./: Cargo.toml  README.md
cli/: Cargo.toml  main.rs
cli/src/: color_state.rs  main.rs  sprite_state.rs  state.rs  texture_state.rs
src/: builtin.rs  color.rs  context.rs  error.rs  lib.rs  shader.rs  sprite.rs  texture.rs  vbo.rs  vertex.rs
