[package]
name = "gl_toolkit"
version = "0.1.0"
authors = ["travistrue2008 <travis.true08@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A basic toolkit for OpenGL"
repository = "https://www.github.com/travistrue2008/gl-toolkit-rs"
readme = "README.md"

[lib]
name = "gl_toolkit"
path = "src/lib.rs"

[dependencies]
gl = "0.10.0"
lazy_static = "1.4.0"
vex = "2.0.1"

[workspace]
members = [
    ".",
    "cli",
]
